apps/webdav/components/tls/patch-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdav
spec:
  template:
    spec:
      containers:
        - name: rclone
          volumeMounts:
            - name: certs
              mountPath: /etc/ssl/certs
              readOnly: true
            - name: tls
              mountPath: /etc/ssl/private
              readOnly: true
