apps/webdav/components/tls/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webdav
spec:
  template:
    spec:
      containers:
        - name: rclone-webdav
          volumeMounts:
            - name: certs
              mountPath: /etc/ssl/certs
              readOnly: true
            - name: tls
              mountPath: /etc/ssl/private
              readOnly: true
      volumes:
        - name: certs
          configMap:
            name: nishir-ca-certificates.crt
        - name: tls
          secret:
            secretName: rclone-tls
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
                mode: 0640
