apps/webdav/components/tls/patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdav
spec:
  ports:
    - name: https
      port: 443
      targetPort: http
